js30-image-gallery/style.css
/* montserrat-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 400;
    src: url('./assets/fonts/montserrat-v26-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}
/* montserrat-800 - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Montserrat';
    font-style: normal;
    font-weight: 800;
    src: url('./assets/fonts/montserrat-v26-latin-800.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

/* comfortaa-regular - latin */
@font-face {
    font-display: swap; /* Check https://developer.mozilla.org/en-US/docs/Web/CSS/@font-face/font-display for other options. */
    font-family: 'Comfortaa';
    font-style: normal;
    font-weight: 400;
    src: url('./assets/fonts/comfortaa-v45-latin-regular.woff2') format('woff2'); /* Chrome 36+, Opera 23+, Firefox 39+, Safari 12+, iOS 10+ */
}

*, 
*::after,
*::before {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

.body_light {
    transition: all 0.30s ease-in-out;
    background-color: #e8eaed;
}

.body_dark {
    transition: all 0.30s ease-in-out;
    background-color: #202124;
}

.wrapper {
    max-width: 1280px;
    margin: auto;
}

/* Header */
.header_wrapper {
    margin: 1rem;
    display: flex;
    align-items: center;
    justify-content: space-between;
}

.logo {
    display: flex;
    align-items: end;
    gap: .5rem;
    font-family: 'Comfortaa';
    color: #424242;
}

.icon {
    width: 2.5rem;
    height: 2.5rem;
    background-image: url(./assets/icons/photo.svg);
    background-repeat: no-repeat;
    background-size: cover;
}

.horizontal_line {
    width: 100%;
    height: .3rem;
    background-color: #26a69a;
}

.right_side {
    display: flex;
    gap: .5rem;
}

.dark_mode {
    width: 2.5rem;
    height: 2.5rem;
    display: flex;
    align-items: center;
    justify-content: center;
}

.svg_mode {
    cursor: pointer;
    transition: all .3s ease;
    color: #5f6368;
}

.svg_mode:hover {
    color: #fdd835;
}

.search_form {
    width: 20rem;
    height: 2.5rem;
    position: relative;
}

#search {
    width: 100%;
    height: 100%;
    padding-left: 1rem;
    border-radius: 20px;
    border: 1px solid #e0e0e0;
    font-size: 1rem;
    outline: none;
    transition: all 0.30s ease-in-out;
    color: #616161;
}

.search_form input:focus {
    box-shadow: 0 0 .3rem  #26a69a;
}

.search_icon {
    position: absolute;
    top: .5rem;
    right: 1rem;
    width: 3rem;
    height: 3rem;
    display: flex;
    gap: .5rem;
}

.svg {
    cursor: pointer;
    transition: all .3s ease;
    color: #5f6368;
}

.svg:hover {
    color: #26a69a;
}

.close_svg {
    opacity: 0;
    visibility: hidden;
}

/* Main */

.gallary {
    width: 100%;
    margin-top: 1rem;
    display: flex;
    flex-wrap: wrap;
    justify-content: space-evenly;
    align-items: flex-start;
}

.gallary-img {
    width: 25rem;
    height: 15rem;
    margin-top: 1rem;
    background-repeat: no-repeat;
    background-size: cover;
    border-radius: 5px;
    transition: all 0.30s ease-in-out;
    &:hover {
        box-shadow: 0 0 .3rem  #26a69a;
    }
}

@media (max-width: 768px) {
    .gallary-img {
        width: 100%;
    }
    .header_wrapper {
        flex-direction: column;
        gap: 1rem;
    }
}

@media (max-width: 400px) {
    .logo {
        font-size: .8rem;
    }
    .search_form {
        width: 15rem;
        height: 1.8rem;
    }
    .search_icon {
        top: .2rem;
        right: 1rem;
    }
}

/* Footer */

.footer_wrapper {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    margin-top: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

.rs_task {
    display: flex;
    width: 5rem;
    height: auto;
}

.github {
    display: flex;
    align-items: center;
}

.github a {
    font-family: 'Montserrat', sans-serif;
    text-decoration: none;
    color: black;
    transition: all 0.5s ease;
}

.github a:hover {
    color: #26a69a;
    opacity: 1;
}

.rs_img, .git_img {
    width: 100%;
}

.year {
    display: flex;
    align-items: center;
    font-family: 'Montserrat', sans-serif;
    color: black;
}

